# TheiaMCR

./: .gitignore  LICENSE  MCRcontrol.py  MCRcontrol_simulation.py  README.md  Readme.md  __init__.py  errList.py  history.txt  pyproject.toml  setup.py
.github/scripts/: generate_cra_report.py
.github/workflows/: cra-security-report.yml
Examples/: Example.py  Example_3.0.py  Example_3.2.py  Example_3.3.py  Example_3.4.py  Example_3.5.py  Example_depricated.py
TheiaMCR/: Example.py  MCRcontrol.py  TheiaMCR.py  __init__.py  errList.py  history.txt  rotatingLogFiles.py
wiki/: Home.md
