[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TheiaMCR"
###                        Be sure to updated the version number in the TheiaMCR.py file ###
version = "3.5.0"
authors = [
  { name="Mark Peterson", email="mpeterson@theiatech.com" },
]
description = "Theia MCR motor control functions"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  'Development Status :: 5 - Production/Stable',
  'Intended Audience :: Science/Research',
  'Intended Audience :: Manufacturing',
  'Operating System :: Microsoft :: Windows',
  'Programming Language :: Python :: 3',
  'Natural Language :: English',
]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
dependencies = [
  "pyserial>=3.5"
]

[project.optional-dependencies]
dev = [
  "build>=1.5.0",
  "twine>=6.0.0",
  "pytest>=9.0.0"
]

[project.urls]
"Homepage" = "https://github.com/cliquot22/TheiaMCR"
"Documentation" = "https://github.com/cliquot22/TheiaMCR/wiki"
"Issues" = "https://github.com/cliquot22/TheiaMCR/issues"

[tool.setuptools.packages.find]
include = ["TheiaMCR*"]
